# taskbar_folders

./: Cargo.toml  README.md  build.rs  config.json
src/: action.rs  config.rs  error.rs  event.rs  icon.rs  main.rs  paint.rs  theme.rs  util.rs  window.rs
