[package]
name = "taskbar_folders"
version = "0.1.0"
edition = "2021"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell"
]

[dependencies.lazy_static]
version = "1.5.0"

[build-dependencies]
winresource = "0.1.17"
