[package]
name = "taskbar_folders"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
lazy_static = "1.5.0"
win-msgbox = "0.2.0"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell"
]

[build-dependencies]
winresource = "0.1.17"
